--- a/src/app/globals.sass
+++ b/src/app/globals.sass
@@ -6,4 +6,6 @@ html,body
     width: 100vw
     height: 100vh
     background-color: black
+*
+    font-family: "Playfair Display", serif
     color: white
