--- a/src/app/globals.sass
+++ b/src/app/globals.sass
@@ -1,11 +1,14 @@
 @tailwind base
 @tailwind components
 @tailwind utilities
+@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap')
 
 html,body
-    width: 100vw
-    height: 100vh
+    width: 100%
+    height: 100%
     background-color: black
 *
-    font-family: "Playfair Display", serif
+    font-family: "Pixelify Sans", sans-serif
+    font-weight: 400
+    font-style: normal
     color: white
