--- a/src/app/home.module.sass
+++ b/src/app/home.module.sass
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap')
 
 .parent
     font-optical-sizing: auto
@@ -12,29 +11,31 @@
 
 .content
     display: flex
-    align-items: flex-start
-    justify-content: flex-start
+    align-items: center
+    justify-content: center
     flex-direction: column
     gap: 10px
 
 .h1
-    font-size: 5rem
+    font-size: 3rem
 .input 
     font-size: 3.5rem
     font-style: italic
     outline: none !important
     color: grey
     background-color: black
+    width: 100%
+    text-align: center
 .btn
     font-size: 2rem
     border-bottom: 2px dashed white
     padding-bottom: 5px
 .cell
     border-color: white
-    width: 8rem
-    font-size: 7rem
+    width: 2rem
+    font-size: 4rem
 
-    height: 8rem
+    height: 2rem
 .yellow
     background-color: yellow
 .green
