change otp to text

--- a/src/app/home.module.sass
+++ b/src/app/home.module.sass
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap')
 .parent
     font-optical-sizing: auto
     width: 100%
@@ -32,10 +32,10 @@
     padding-bottom: 5px
 .cell
     border-color: white
-    width: 2rem
-    font-size: 4rem
+    width: 1rem
+    font-size: 2rem
 
-    height: 2rem
+    height: 1rem
 .yellow
     background-color: yellow
 .green
