wip: ui changes

--- a/src/app/home.module.sass
+++ b/src/app/home.module.sass
@@ -17,8 +17,9 @@
     gap: 10px
 
 .h1
-    font-size: 3rem
-.input 
+    font-size: 2rem
+    text-align: center
+.input
     font-size: 3.5rem
     font-style: italic
     outline: none !important
@@ -32,13 +33,12 @@
     padding-bottom: 5px
 .cell
     border-color: white
-    width: 1rem
     font-size: 2rem
-
-    height: 1rem
 .yellow
     background-color: yellow
 .green
     background-color: green
 .gray
     background-color: black
+.board
+    transform: scale(0.9)
