--- a/src/app/globals.sass
+++ b/src/app/globals.sass
@@ -1,14 +1,18 @@
 @tailwind base
 @tailwind components
 @tailwind utilities
-@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap')
-
+@import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&family=Press+Start+2P&display=swap')
 html,body
     width: 100%
     height: 100%
     background-color: black
+    overflow: hidden
 *
     font-family: "Pixelify Sans", sans-serif
     font-weight: 400
     font-style: normal
     color: white
+.press-start-regular
+    font-family: "Press Start 2P", system-ui
+    font-weight: 400
+    font-style: normal
